# Segmentation_Art

./: CMakeLists.txt  artsegment.cpp  artsegment.h  artsegment2.cpp  boundaryScan.cpp  boundaryScan.h  contourTrack.cpp  contourTrack.h  psoBook.cpp  psoBook.h  psosegment.cpp  psosegment.h  segControl.cpp  segControl.h  segMisc.cpp  segMisc.h  segUtil.cpp  segUtil.h  segmisc.h  testArtSegment.cpp  testPso.cpp  testPsoSegment.cpp  testThree.cpp  testVector.cpp  threeDiff.cpp  threeDiff.h  vectorSpace.h  vectorspace.h
